build(all): setting gradle for multi module